test/errors/test_rr2.lac
//-----------------------------------------------------------------------------------
//
// LaCoGen - Test RR Conflict
//
// 30/05/2020
//
// Test Reduce/Reduce conflict
//
// -----------------------------------------------------------------------------------
  
%title        = "LaCoGen TEST RR Conflict";
%version      = "1.0";
%author       = "Duncan Munro";
%start        = <S>;


// ====================================================================
// Terminals
// ====================================================================

a = "a";
b = "b";
e = "e";


// ====================================================================
// Rules
// ====================================================================

<S> : a <E> a
    | b <E> b
	| a <F> b
	| b <F> a
	;

<E> : e
	;

<F> : e
	;
	